<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_button"
        android:id="@+id/switch1"
        android:layout_gravity="center_horizontal" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_button"
        android:id="@+id/radioButton" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button"
        android:id="@+id/toggleButton" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:id="@+id/checkBox"
        android:layout_gravity="center_horizontal" />

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/button"
        android:layout_gravity="bottom" />

</LinearLayout>